# fake-new-detection

./: .env.colab.example  .env.example  .env.mac  .env.mac.example  .env.vastai.example  .env.windows.example  .gitignore  .orchestra-skills.json  AGENTS.md  GEMINI.md  README_SIMPLE_MODULES.md  README_preprocessing.md  VASTAI_GUIDE.md  add_synthetic_labels.py  check_json.py  check_vifactcheck_labels.py  config.json  crawling_status.json  environment.yml  migrate_data_root.py  news_data.json  preprocess_vietnamese_data.py  pyproject.toml  pytest.ini  requirements.txt  setup_vastai.py  setup_vastai.sh  test_deep_crawling.ipynb  test_multimodal_vietnamese.py  test_pkl.ipynb  test_src_preprocessing.py  thesis_plan.md
.github/: copilot-instructions.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
archive/: ARCHIVE_README.md
diagrams/: README.md  arch_05a_mil_attention.drawio  arch_05b_asymmetric_gate.drawio  label_system_sequence.drawio  label_system_workflow.drawio  pipeline_overview.drawio  stage2_workflow.drawio  stage39_phobert_training.drawio  stage3_coolant_training.drawio  stage6d_fusion_training.drawio  training_pipeline_workflow.drawio
docs/: COOLANT_ARCHITECTURE.md  COOLANT_WORKFLOW_ANALYSIS.md  DATA_STORAGE.md  MODULE_MAPPING.md  VIFACTCHECK_MODULES.md  anchored_coolant_architecture.drawio  training_stages_documentation.md
examples/: simple_pipeline.py  train_coolant_official.py
factcheck_agents/: README.md  __init__.py  cli.py  config.py  graph.py  graph_utils.py  helpers.py  mcp_server.py  prompts.py  requirements.txt  source_tier.py  state.py
notebooks/: 2_preprocess_only.ipynb  3_load_dataset_and_train.ipynb  4_train_model.ipynb  crawl_and_preprocess_simple.ipynb  google_drive_upload.ipynb  recover_labels.py  test_crawler.ipynb  test_vnexpress_crawler.ipynb  train_phased_coolant.ipynb  train_vietnamese_coolant.ipynb
src/: 4_train_model.ipynb  GEMINI.md  OVERVIEW.md  __init__.py  agent_test.py  crawling_status.json  crawling_status_dev.json  crawling_status_test.json  crawling_status_train.json  failed_urls_test_agent_test.json  main.py  (+4 more)
(+289 files in other folders)
