[project]
name = "fake-news-detection"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Vietnamese NLP
    "underthesea>=6.8.0",
    # HuggingFace ecosystem
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "safetensors>=0.4.3",
    # Core ML / data
    "numpy<2",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "h5py>=3.11.0",
    "pyarrow>=15.0.0",
    # Image processing
    "Pillow>=10.3.0",
    # Visualisation & experiment tracking
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "mlflow>=2.11.0",
    # Web crawling & HTTP
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "orjson>=3.10.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
    "regex>=2024.0.0",
    "nest-asyncio>=1.6.0",
    # Jupyter
    "jupyter",
    "jupyterlab",
    "ipykernel",
    # Compatibility fix (protobuf descriptor error with older mlflow)
    "protobuf==3.20.3",
    # Google Drive upload
    "google-api-python-client>=2.120.0",
    "google-auth>=2.29.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "papermill>=2.7.0",
]

[project.optional-dependencies]
# factcheck_agents — standalone multi-agent fact-checking module.
# Install with:  uv sync --extra agents
agents = [
    "langgraph>=0.2.28",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.40.0",
    "mcp>=1.2.0",
]

[tool.uv]
# torch/torchvision are intentionally excluded — installed separately
# by vastai/setup_vastai.sh with the correct CUDA index URL before `uv sync`.

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -v --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "src"]
markers = [
    "slow: đánh dấu test chạy chậm",
    "integration: test tích hợp",
]
